# accu2017_course

./: CMakeLists.txt  README.md  TheArtOfWritingReasonableConcurrentCode.tex
Channels/: a.out  channel01.cpp  channel02.cpp  channel03.cpp  channel04.cpp  process_signature.cpp
Exercise01/: CMakeLists.txt  main.cpp  solution.cpp
Exercise02/: CMakeLists.txt  main.cpp  solution.cpp
Exercise03/: CMakeLists.txt  main.cpp  solution.cpp  text.txt
Exercise04/: CMakeLists.txt  main.cpp  solution.cpp
Futures/: QtScheduler.cpp  future03.cpp  future04.cpp  future11.cpp  future12.cpp  future14.cpp  future17.cpp  mutex01.cpp  mutex_to_queue.cpp
Slides/Futures/: a.out  future01.cpp  future02.cpp  future12b.cpp  future13.cpp  future13b.cpp  future15.cpp  future16.cpp
Slides/Introduction/: AmdahlsLaw.gcx
Slides/Synchronization/: a.out  mutex01.cpp
Synchronization/: mutex02.cpp
stlab/: CMakeLists.txt  default_executor.hpp
